only add json-ld schema.org script on production

--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -312,6 +312,7 @@
     {% endblock %}
 {% endif %}
 
+{% if not page|is_debug %}
 {# ======= JSON-LD Structure ======= #}
 <script type="application/ld+json">
 {
@@ -501,3 +502,4 @@
     }
 }
 </script>
+{% endif %}
