[#3629] Replace script logic for CSS flex

--- a/hs_core/templates/pages/groups-authenticated.html
+++ b/hs_core/templates/pages/groups-authenticated.html
@@ -49,6 +49,8 @@
                                 </div>
                                 <div class="group-description"><p>{{ group.gaccess.description|linebreaks }}</p></div>
 
+                                <div class="spacer"></div>
+
                                 <div class="text-center group-thumbnail-footer">
                                     {% if group.gaccess.public %}
                                         <div class="users-joined height-fix">
