Extend change to second template

--- a/hs_core/templates/pages/groups-unauthenticated.html
+++ b/hs_core/templates/pages/groups-unauthenticated.html
@@ -51,6 +51,8 @@
                                     <div class="group-description"><p>{{ group.gaccess.description|linebreaks }}</p>
                                     </div>
 
+                                    <div class="spacer"></div>
+
                                     <div class="text-center group-thumbnail-footer">
                                         {% if group.gaccess.public %}
                                             <div class="users-joined height-fix">
