--- a/theme/templates/pages/group.html
+++ b/theme/templates/pages/group.html
@@ -404,8 +404,10 @@
                                         <div class="panel-body">
                                             <div class="list-group">
                                                 <ul class="list-group inputs-group">
-                                                    <i class="list-group-item no-items-found">No resources have been
-                                                        shared with this group yet.</i>
+                                                    <i class="list-group-item no-items-found">
+                                                        <h5>No resources have been
+                                                        shared with this group yet.</h5>
+                                                    </i>
                                                 </ul>
                                             </div>
 
