revert accidentally checked in debug comments

--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -312,7 +312,7 @@
     {% endblock %}
 {% endif %}
 
-{# {% if not page|is_debug %} #}
+{% if not page|is_debug %}
 {# ======= JSON-LD Structure ======= #}
 <script type="application/ld+json">
 {
@@ -468,4 +468,4 @@
     }
 }
 </script>
-{# {% endif %} #}
+{% endif %}
