--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -201,6 +201,7 @@
                                 <option>RCCZO</option>
                                 <option>SSCZO</option>
                                 <option>SSHCZO</option>
+                                <option>IMLCZO</option>
                                 <option>Cross-CZO</option>
                             </select>
                             <mover :all-items="topics.itemsList" :right-items="topics.selectedItems"
