add geoserver web app key for aggregations

--- a/hs_core/templates/pages/metadata_terms.html
+++ b/hs_core/templates/pages/metadata_terms.html
@@ -1486,6 +1486,7 @@
                 <ul>
                     <li> <strong>${HS_AGG_PATH}</strong>: Path of an aggregation in HydroShare</li>
                     <li> <strong>${HS_MAIN_FILE}</strong>: The main file name of an aggregation</li>
+                    <li> <strong>${HS_AGG_GEOSERVER}</strong>: An aggregation path formatted as a geoserver name. ("path/to/aggregation.shp" -> "path to aggregation")</li>
                 </ul>
             </ul>
                 An example:<br>
