--- a/theme/static/css/hs-file-icons.css
+++ b/theme/static/css/hs-file-icons.css
@@ -90,6 +90,20 @@
 	height: 32px;
 }
 
+.fb-view-grid .fb-stack-mp img {
+    width: 18px;
+    top: 8px;
+    position: absolute;
+    left: 3px;
+}
+
+.fb-view-list .fb-stack-mp img {
+    width: 9px;
+    top: 5px;
+    position: absolute;
+    left: 13px;
+}
+
 .fb-view-list .fb-stack {
 	width: 18px;
 	height: 18px;
@@ -285,10 +299,14 @@
 	font-size: 9px;
 }
 
-.fb-view-list .fb-folder-aggregation {
+.fb-view-list .fb-folder-aggregation, .fb-view-list .fb-folder-mp {
 	margin-left: 0;
 }
 
 .fb-folder-aggregation {
 	color: #45911c;
+}
+
+.fb-folder-mp {
+    color: #3f51b5;
 }
