--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -457,7 +457,7 @@
         "contentUrl": "https://www.hydroshare.org/hsapi/resource/{{ cm.short_id }}/",
         "description": "Zipped BagIt Bag containing the HydroShare Resource",
         "dateModified": "{{ cm.last_updated | date:"c" }}",
-        {% if not cm.raccess.published %}
+        {% if cm.raccess.published %}
         "identifier": [
             {
             {% else %}
@@ -469,7 +469,7 @@
                 },
                 "propertyId": "UUID",
                 "value": "uuid:{{ cm.short_id }}"
-            }{% if not cm.raccess.published %},
+            }{% if cm.raccess.published %},
             {
                 "@type": "PropertyValue",
                 "additionalType": [
