--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -475,7 +475,7 @@
             ],
             "identifier": "md5:{{ cm| bag_checksum }}",
             "propertyID": "MD5",
-            "value": "{{ cm| bag_checksum }}",
+            "value": "{{ cm| bag_checksum }}"
         }
         ]{% endif %}
     }
