[#3519] adding menu option to create model instance aggregation

--- a/hs_core/templates/pages/genericresource.html
+++ b/hs_core/templates/pages/genericresource.html
@@ -216,6 +216,13 @@
                                  alt="Model Program Aggregation Icon" class="resource-type-icon"/>
                                 <span>Model Program</span>
                             </li>
+                            <li id="btn-set-model-instance-file-type" data-menu-name="setmodelinstancefiletype"
+                                data-toggle="tooltip" data-placement="right" data-fb-action="setModelInstanceFileType"
+                                title="Convert to a model instance dataset to which you can add metadata">
+                                <img src="{{ STATIC_URL }}img/resource-icons/modelinstance48x48.png"
+                                 alt="Model Instance Aggregation Icon" class="resource-type-icon"/>
+                                <span>Model Instance</span>
+                            </li>
                         </ul>
                     </li>
                     <li data-fb-action="removeAggregation"
