--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -402,20 +402,30 @@
 	},
 	"license": {
 	    "@type": "CreativeWork",
-	    "text": "{{ cm.metadata.rights.statement }}",
 	    {% if cm.metadata.rights.statement == "This resource is shared under the Creative Commons Attribution CC BY." %}
+	    "text": "{{ cm.metadata.rights.statement }}",
         "url": "http://creativecommons.org/licenses/by/4.0/"
         {% elif cm.metadata.rights.statement == "This resource is shared under the Creative Commons Attribution-ShareAlike CC BY-SA." %}
+        "text": "{{ cm.metadata.rights.statement }}",
         "url": "http://creativecommons.org/licenses/by-sa/4.0/"
         {% elif cm.metadata.rights.statement == "This resource is shared under the Creative Commons Attribution-NoDerivs CC BY-ND." %}
+        "text": "{{ cm.metadata.rights.statement }}",
         "url": "http://creativecommons.org/licenses/by-nd/4.0/"
         {% elif cm.metadata.rights.statement == "This resource is shared under the Creative Commons Attribution-NoCommercial-ShareAlike CC BY-NC-SA." %}
+        "text": "{{ cm.metadata.rights.statement }}",
         "url": "http://creativecommons.org/licenses/by-nc-sa/4.0/"
         {% elif cm.metadata.rights.statement == "This resource is shared under the Creative Commons Attribution-NoCommercial CC BY-NC." %}
+        "text": "{{ cm.metadata.rights.statement }}",
         "url": "http://creativecommons.org/licenses/by-nc/4.0/"
         {% elif cm.metadata.rights.statement == "This resource is shared under the Creative Commons Attribution-NoCommercial-NoDerivs CC BY-NC-ND." %}
+        "text": "{{ cm.metadata.rights.statement }}",
         "url": "http://creativecommons.org/licenses/by-nc-nd/4.0/"
-        {% elif cm.metadata.rights.url %}
+        {% elif cm.metadata.rights.statement and cm.metadata.rights.url %}
+        "text": "{{ cm.metadata.rights.statement }}",
+        "url": "{{ cm.metadata.rights.url }}"
+        {% elif cm.metadata.rights.statement %}
+        "text": "{{ cm.metadata.rights.statement }}"
+        {% else %}
         "url": "{{ cm.metadata.rights.url }}"
         {% endif %}
 	},
