added customized license name to pass google search tool validation for resources with customized license with no urls

--- a/theme/templates/resource-landing-page/title-section.html
+++ b/theme/templates/resource-landing-page/title-section.html
@@ -407,7 +407,8 @@
         "text": "{{ cm.metadata.rights.statement }}",
         "url": "{{ cm.metadata.rights.url }}"
         {% elif cm.metadata.rights.statement %}
-        "text": "{{ cm.metadata.rights.statement }}"
+        "text": "{{ cm.metadata.rights.statement }}",
+        "name": "Customized license"
         {% else %}
         "url": "{{ cm.metadata.rights.url }}"
         {% endif %}
