--- a/theme/templates/resource-landing-page/top-right-buttons.html
+++ b/theme/templates/resource-landing-page/top-right-buttons.html
@@ -70,7 +70,7 @@
 
             {% if not is_replaced_by %}
                 {% if user.is_authenticated and rights.statement %}
-                    {% if cm.raccess.public or not self_access_level == 'None' %}
+                    {% if can_copy %}
                         {% if not allow_resource_copy %}
                             <a disabled>
                                 <span data-toggle="tooltip" data-placement="bottom"
