--- a/theme/templates/resource-landing-page/top-right-buttons.html
+++ b/theme/templates/resource-landing-page/top-right-buttons.html
@@ -70,8 +70,8 @@
 
             {% if not is_replaced_by %}
                 {% if user.is_authenticated and rights.statement %}
-                    {% if can_copy %}
-                        {% if not allow_resource_copy %}
+                    {% if permissions_allow_copy %}
+                        {% if not rights_allow_copy %}
                             <a disabled>
                                 <span data-toggle="tooltip" data-placement="bottom"
                                       title="You cannot copy because the license for this resource does not permit copying"
