--- a/theme/templates/generic/includes/comment.html
+++ b/theme/templates/generic/includes/comment.html
@@ -17,6 +17,13 @@
                 <a href="#reply-{{ comment.id }}" class="reply">
                     <span class="glyphicon glyphicon-share-alt"></span> {% trans "Reply" %}
                 </a>
+                {%  if user.is_authenticated %}
+                    {% if comment.user == user or user.is_staff or self_access_level == 'owner' %}
+                        <span comment-id="{{ comment.id }}"
+                              class="glyphicon glyphicon-trash btn-remove icon-button btn-confirm-delete-comment"
+                             title="Remove">{% trans "Delete" %}</span>
+                    {% endif %}
+                {% endif %}
                 {% if settings.COMMENTS_USE_RATINGS %}
                     <div class="rating">
                         {% rating_for comment %}
@@ -50,13 +57,6 @@
                 </div>
             {% endif %}
         {% endeditable %}
-        {% if not comment.is_removed %}
-            {%  if user.is_authenticated %}
-                {% if comment.user == user or user.is_staff or self_access_level == 'owner' %}
-                    <a href="{% url 'delete_resource_comment' comment.id %}">--delete this comment--</a>
-                {% endif %}
-            {% endif %}
-        {% endif %}
     </div>
     {% endif %}
 </form>
