add delete messages conditional for threaded replies

--- a/theme/templates/resource-landing-page/modals.html
+++ b/theme/templates/resource-landing-page/modals.html
@@ -1433,7 +1433,7 @@
                     <h4 class="modal-title" id="extra_meta_title"> Delete Comment </h4>
                 </div>
                 <div class="modal-body">
-                <p>
+                <p id="delete_comment_message">
                     Confirm to delete the comment and any threaded reply messages
                 </p>
                 </div>
