--- a/theme/templates/generic/includes/comment.html
+++ b/theme/templates/generic/includes/comment.html
@@ -18,10 +18,10 @@
                     <span class="glyphicon glyphicon-share-alt"></span> {% trans "Reply" %}
                 </a>
                 {%  if user.is_authenticated %}
-                    {% if comment.user == user or user.is_staff or self_access_level == 'owner' %}
+                    {% if comment.user == user or user.is_superuser or self_access_level == 'owner' %}
                         <span comment-id="{{ comment.id }}"
                               class="glyphicon glyphicon-trash btn-remove icon-button btn-confirm-delete-comment"
-                             title="Remove">{% trans "Delete" %}</span>
+                             title="Delete Reply">{% trans "Delete" %}</span>
                     {% endif %}
                 {% endif %}
                 {% if settings.COMMENTS_USE_RATINGS %}
